--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+  "node": ">=18 <23"
+},
   "type": "commonjs",
   "dependencies": {
     "bcrypt": "^6.0.0",
